added session get and delete methods
